--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/tooplate-style.css">
-    <title>no hay titulo</title>
+    <title>Menu</title>
     <!--
 
     Template 2107 New Spot
@@ -28,7 +28,7 @@
                                 <h1 class="tm-site-title">Masacre de Mapiripan</h1>
                                 <p class="tm-site-subtitle">grupo paramilitar</p>
                             </header>
-                            <p>invitacion</p>
+                            <p>Dale click en el siguien boton para saber toda la informacion de la masacre de Mapiripan</p>
                             <p class="text-center mt-4 mb-0">
                                 <a class="btn tm-btn-terciary" href="https://henrynelsongonzalez.github.io/Pluet_Mortuorum/#" class="lined">Vamos.</a>
                             </p>
@@ -43,9 +43,9 @@
                 <div class="row">
                     <div class="col-xl-5 col-lg-6 tm-flex-center-v tm-text-container tm-section-left">
                         <h2 class="tm-color-secondary mb-4">Masacre del Aro</h2>
-                        <p class="mb-5">invitacion 2</p>
+                        <p class="mb-5">Dale click en el siguiente boton para saber toda la informacion de la masacre del aro</p>
                         <p class="text-right mb-0">
-                            <a class="btn tm-btn-terciary" href="link" class="lined">Vamos.</a>
+                            <a class="btn tm-btn-terciary" href="https://henrynelsongonzalez.github.io/anulus/" class="lined">Vamos.</a>
                         </p>
                     </div>
                     <div class="col-xl-7 col-lg-6 tm-circle-img-container">
