--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-5 col-lg-6 tm-flex-center-v tm-text-container tm-section-left">
-                        <h2 class="tm-color-secondary mb-4">Masacre del Aro</h2>
-                        <p class="mb-5">Dale click en el siguiente boton para saber toda la informacion de la masacre del aro</p>
+                        <h2 class="tm-color-secondary mb-4">Masacre del salado</h2>
+                        <p class="mb-5">Dale click en el siguiente boton para saber toda la informacion de la masacre del salado</p>
                         <p class="text-right mb-0">
                             <a class="btn tm-btn-terciary" href="https://henrynelsongonzalez.github.io/anulus/" class="lined">Vamos.</a>
                         </p>
                     </div>
                     <div class="col-xl-7 col-lg-6 tm-circle-img-container">
-                        <img src="img/img-01.jpg" alt="Image" class="rounded-circle tm-circle-img">
+                        <img src="img/02.jpeg" alt="Image" class="rounded-circle tm-circle-img">
                     </div>
                 </div>
             </div>
