--- a/index.html
+++ b/index.html
@@ -60,12 +60,10 @@
                     <div class="col-sm-12 tm-section-2-right">
                         <div class="tm-bg-circle-white tm-bg-circle-pad-2 tm-flex-center-v">
                             <header>
-                                <h2 class="tm-color-primary">continuara</h2>
+                                <h2 class="tm-color-primary">masacre de bahia portete</h2>
                             </header>
-                            <p>
-                                continuara
-                            </p>
-                            <a class="btn tm-btn-terciary" href="link 2" class="lined">Vamos.</a>
+                            <p class="mb-5">Dale click en el siguiente boton para saber toda la informacion de la masacre de bahia portete </p>
+                            <a class="btn tm-btn-terciary" href="https://henrynelsongonzalez.github.io/sinus/" class="lined">Vamos.</a>
                         </div>
                     </div>
                 </div>
