--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="col-sm-12">
                         <div class="tm-bg-circle-white tm-flex-center-v">
                             <header class="text-center">
-                                <h1 class="tm-site-title">Masacre de Mapiripan</h1>
+                                <h1 class="tm-site-title">Masacre de MAPIRIPAN</h1>
                                 <p class="tm-site-subtitle">grupo paramilitar</p>
                             </header>
                             <p>Dale click en el siguien boton para saber toda la informacion de la masacre de Mapiripan</p>
@@ -42,10 +42,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-5 col-lg-6 tm-flex-center-v tm-text-container tm-section-left">
-                        <h2 class="tm-color-secondary mb-4">Masacre del salado</h2>
+                        <h2 class="tm-color-secondary mb-4">Masacre del SALADO</h2>
                         <p class="mb-5">Dale click en el siguiente boton para saber toda la informacion de la masacre del salado</p>
                         <p class="text-right mb-0">
-                            <a class="btn tm-btn-terciary" href="https://henrynelsongonzalez.github.io/anulus/" class="lined">Vamos.</a>
+                            <a class="btn tm-btn-terciary" href="https://henrynelsongonzalez.github.io/EL_SALADO/" class="lined">Vamos.</a>
                         </p>
                     </div>
                     <div class="col-xl-7 col-lg-6 tm-circle-img-container">
@@ -60,7 +60,7 @@
                     <div class="col-sm-12 tm-section-2-right">
                         <div class="tm-bg-circle-white tm-bg-circle-pad-2 tm-flex-center-v">
                             <header>
-                                <h2 class="tm-color-primary">masacre de bahia portete</h2>
+                                <h2 class="tm-color-primary">masacre de BAHÍA PORTETE</h2>
                             </header>
                             <p class="mb-5">Dale click en el siguiente boton para saber toda la informacion de la masacre de bahia portete </p>
                             <a class="btn tm-btn-terciary" href="https://henrynelsongonzalez.github.io/sinus/" class="lined">Vamos.</a>
