--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="row">
                     <div class="col-xl-5 col-lg-6 tm-flex-center-v tm-text-container tm-section-left">
                         <h2 class="tm-color-secondary mb-4">Masacre del SALADO</h2>
-                        <p class="mb-5">Dale click en el siguiente boton para saber toda la informacion de la masacre del salado</p>
+                        <p class="mb-5">Dale click en el siguiente boton para saber toda la informacion de la masacre del Salado</p>
                         <p class="text-right mb-0">
                             <a class="btn tm-btn-terciary" href="https://henrynelsongonzalez.github.io/EL_SALADO/" class="lined">Vamos.</a>
                         </p>
